<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ConditionsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Terms &amp; Conditions"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/dim_value_10"
        android:layout_marginRight="@dimen/dim_value_10"
        android:layout_marginTop="@dimen/dim_value_10"
        android:layout_gravity="top|center"
        android:gravity="top|center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"
            android:layout_margin="@dimen/dim_value_10"/>


        <TextView
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextLight"
            android:text="@string/terms_condition"
            android:textSize="14sp"
            android:layout_marginLeft="@dimen/dim_value_10"
            android:layout_marginRight="@dimen/dim_value_10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/condtion_heading_1"
            android:textSize="16sp"
            android:layout_margin="@dimen/dim_value_10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextLight"
            android:text="@string/condtion_normal_1"
            android:textSize="14sp"
            android:layout_marginLeft="@dimen/dim_value_10"
            android:layout_marginRight="@dimen/dim_value_10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/condtion_heading_2"
            android:textSize="16sp"
            android:layout_margin="@dimen/dim_value_10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextLight"
            android:text="@string/condtion_normal_2"
            android:textSize="14sp"
            android:layout_marginLeft="@dimen/dim_value_10"
            android:layout_marginRight="@dimen/dim_value_10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/gmail"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/dim_value_10"
            android:layout_marginRight="@dimen/dim_value_10"
            android:layout_marginBottom="@dimen/dim_value_10"/>



    </LinearLayout>

</ScrollView>